# XPixiv

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  config.toml  cookie.txt
.github/workflows/: ci.yml  release.yml
.rpm/: x-pixiv.spec
pixiv/: Cargo.toml  README.md
pixiv/src/: artworks.rs  data.rs  downloader.rs  lib.rs  rank.rs  user.rs
pixiv/src/artworks/: data.rs  mod.rs
pixiv/src/rank/: mod.rs  rank_list.rs
src/: cli.rs  main.rs  ui_util.rs
src/tui_util/: artwork.rs  compose.rs  data.rs  mod.rs  rank.rs  user.rs  util.rs
src/tui_util/config/: group.rs  mod.rs  output.rs
