[package]
name = "x-pixiv"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/xiaoxigua-1/XPixiv"
readme = "README.md"
keywords = ["pixiv", "downloader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
pixiv = { path = "./pixiv", version = "0.1.0" }
tui = "0.19"
crossterm = "0.25"
uuid = { version = "1.3.0", features = ["v4"] } 
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.3"

[workspace]
members = ["pixiv"]
