[package]
name = "x-pixiv"
description = "Pixiv downloader"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/xiaoxigua-1/XPixiv"
readme = "README.md"
keywords = ["pixiv", "downloader"]
authors = ["xiaoxigua-1"]
homepage = "https://github.com/xiaoxigua-1/XPixiv"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
x-pixiv-lib = { path = "./pixiv", version = "0.1.2" }
tui = "0.19"
crossterm = "0.25"
uuid = { version = "1.3.0", features = ["v4"] } 
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.3"
toml = "0.7.3"
serde = "1"


[features]
default = ["cli", "tui"]
cli = []
tui = []

[package.metadata.deb]
depends = "libssl1.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.rpm]
package = "x-pixiv"

[package.metadata.rpm.cargo]
buildflags = ["--output", "."]

[package.metadata.rpm.targets]
x-pixiv = { path = "/usr/bin/x-pixiv" }
