[package]
name = "x-pixiv-lib"
version = "0.1.0"
edition = "2021"
description = "pixiv library"
license = "MIT"
repository = "https://github.com/xiaoxigua-1/XPixiv"
readme = "README.md"
keywords = ["pixiv", "downloader"]
authors = ["xiaoxigua-1 <xigua@xigua.tw>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.15.0"
serde_json = "1.0"
